# ubicor-api

./: .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  build.sh  docker-compose.yaml  docker-entrypoint.sh  manage.py  prestart.sh  pyproject.toml  requirements.txt  scripts.sh
.github/workflows/: pipeline.yml
alembic/: env.py
alembic/versions/: 084c1fe00d8e_create_models.py  0a5d25be5061_create_models.py  14bf5215440e_create_models.py  4f275ac0046b_create_models.py  5ce4505fe060_create_models.py  5d3a1c80c7a2_add_priority_order_to_building_image.py  96878da78c67_add_provider_to_user.py  9c68eacd67f1_add_building_zone.py  e3350f532423_create_university.py  f0855e19362c_add_is_active_to_building.py  f8ed083eed8a_create_image.py  f9a98b0b6d63_create_user_and_scopes.py
app/: main.py
app/auth/: crud.py  dependencies.py  models.py  routes.py  schemas.py  scopes.py  utils.py
app/common/utils/: images.py
app/core/: commands.py  config.py  routes.py
app/db/: base.py  base_class.py  session.py
app/universities/: models.py
app/universities/commands/: __init__.py  initial_data.json  insert_initial_data.py  upload_unicor_imgs.py
app/universities/crud/: buildings.py  images.py  positions.py  rooms.py  university.py
app/universities/dependencies/: buildings.py  rooms.py  universities.py
app/universities/routers/: __init__.py  building_zones.py  buildings.py  reports.py  rooms.py  universities.py
app/universities/schemas/: buildings.py  positions.py  reports.py  rooms.py  universities.py
app/universities/utils/: frontend.py  images.py
