[tool.poetry]
name = "ubicor_api"
version = "0.1.0"
description = ""
authors = ["Cristian Alvarez H <alvarezhernandezcristian1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = "^1.4.36"
pydantic = {extras = ["email"], version = "^1.9.0"}
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
alembic = "^1.7.7"
Pillow = "^9.1.0"
click = "^8.1.3"
google-auth = "^2.9.1"
requests = "^2.28.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"


[tool.black]
line-length = 88
extend-exclude = '''
(
    alembic/*
)
'''


[tool.isort]
profile = "black"
line_length = 88
skip_glob = ["alembic"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
